# mud

./: .gitignore  CMakeLists.txt  PERFETTO_GUIDE.md
bugs/: CONTINUE.sh  INDEX.md  PROGRESS.txt  README.md  WORK_PLAN.md  all_files.txt  findings.md  progress.md
bugs/findings/: 001_path_traversal.md  002_out_of_bounds.md  003_dead_code.md  004_global_buf_race.md  005_strcpy_strcat_unsafe.md  006_disconnect_logic_error.md  007_command_injection_critical.md  008_plaintext_passwords_email.md  009_duplicate_condition_check.md  010_sscanf_buffer_overflow.md  011_global_buf_names.md  012_strcpy_no_bounds_check.md  013_uninitialized_iterator.md  014_ip_parsing_no_validation.md  015_sscanf_no_width_boot_data_files.md  016_sscanf_buffer_overflow_db.md  017_sscanf_self_overwrite.md  018_sscanf_no_width_player_index.md  019_command_injection_interpreter.md  020_command_injection_inspect.md  BOOT_MODULE_ANALYSIS_SUMMARY.md  BOOT_MODULE_ISSUES_QUICK_REF.md  INDEX.md  ISSUE-001.md  ISSUE-002.md  ISSUE-003.md  ISSUE-004.md  ISSUE-005.md  ISSUE-006.md  ISSUE-007.md  ISSUE-008.md  ISSUE-009.md  ISSUE-010.md  ISSUE-011.md  ISSUE-012.md  ISSUE-013.md  ISSUE-014.md  ISSUE-015.md  ISSUE-016.md  ISSUE-017.md  (+23 more)
data/world/mob/: 100.yaml  101.yaml  102.yaml  103.yaml  104.yaml  105.yaml  106.yaml  107.yaml  108.yaml  109.yaml  110.yaml  111.yaml  112.yaml  113.yaml  115.yaml  120.yaml  130.yaml  131.yaml  132.yaml  133.yaml  134.yaml  155.yaml  156.yaml  166.yaml  167.yaml  168.yaml  170.yaml  188.yaml  189.yaml  190.yaml  191.yaml  192.yaml  193.yaml  197.yaml  198.yaml  199.yaml  200.yaml  201.yaml  202.yaml  203.yaml  (+83 more)
data/world/wld/: 100.yaml  101.yaml  102.yaml  103.yaml  104.yaml  105.yaml  106.yaml  107.yaml  108.yaml  109.yaml  110.yaml  111.yaml  112.yaml  113.yaml  114.yaml  115.yaml  116.yaml  120.yaml  121.yaml  125.yaml  (+83 more)
lib.template/misc/: configuration.xml
src/utils/: message_capture.cpp  message_capture.h
tools/: convert_to_yaml.py
tools/identify-export/: .gitignore  CMakeLists.txt  README.md  STATUS.md
tools/identify-export/src/: db_writer.cpp  db_writer.h  encoding.cpp  encoding.h  exporter.cpp  exporter.h  identify_simulation.cpp  identify_simulation.h  main.cpp  mock_char.cpp  mock_char.h  mud_stubs.cpp
(+14 files in other folders)
